# egmri_ws

./: .gitignore  README.md  compile_proto.sh
src/egmri_controller_pkg/: .gitignore  CMakeLists.txt  CMakeLists_1.txt  controller_plugins.xml  package.xml
src/egmri_controller_pkg/include/egmri/proto/: egmri.pb.cc  egmri.pb.h
src/egmri_controller_pkg/include/egmri_controller_pkg/: controller.h  dualimpedancecontroller.h  dualtrialcontroller.h  encoderfilter.h  encodersensor.h  options.h  positioncontroller.h  robotplugin.h  sample.h  sensor.h  tfcontroller.h  trialcontroller.h  yumiplugin.h
src/egmri_controller_pkg/launch/: yumi_control.launch  yumi_controller.yaml  yumi_only_controller.launch
src/egmri_controller_pkg/msg/: ControllerParams.msg  DataType.msg  PositionCommand.msg  SampleResult.msg  TrialCommand.msg
src/egmri_controller_pkg/proto/: egmri.proto
src/egmri_controller_pkg/scripts/: pid_pub.py
src/egmri_controller_pkg/src/: controller.cpp  dualimpedancecontroller.cpp  dualtrialcontroller.cpp  encoderfilter.cpp  encodersensor.cpp  positioncontroller.cpp  robotplugin.cpp  sample.cpp  sensor.cpp  tfcontroller.cpp  trialcontroller.cpp  util.cpp  yumiplugin.cpp
src/egmri_controller_pkg/src/pd_plus/: DerProd.cpp  DerProd.h  DerSum.cpp  DerSum.h  DynamicMatrices.cpp  DynamicMatrices.h  Exponential.cpp  Exponential.h  ForwardKinematics.cpp  ForwardKinematics.h  InvAdjoint.cpp  InvAdjoint.h  Joint.cpp  Joint.h  ListGet.cpp  ListGet.h  ListSet.cpp  ListSet.h  Quaternion.cpp  Quaternion.h  Skew.cpp  Skew.h  __main__  __main__.cpp  abs.cpp  abs.h  abs1.cpp  abs1.h  all.cpp  all.h  allOrAny.cpp  allOrAny.h  any1.cpp  any1.h  applyVectorFunction.cpp  applyVectorFunction.h  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  (+38 more)
src/proto/: egmri.proto
